--- a/main.css
+++ b/main.css
@@ -1,32 +1,65 @@
-header{
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.2em;
     text-align: center;
-    font-size: 3em;
-    text-shadow: 2px 2px 5px seagreen;
+    text-shadow: 1px 1px 4px lightgrey;
     font-weight: bolder;
     word-spacing: 5px;
     letter-spacing: 3px;
-
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(255, 255, 255); /* Semi-transparent background */
+    padding: 10px 0;
+    box-shadow: 1px 1px 2px;
+    z-index: 1000; /* Ensures header stays on top */
 }
 
-body{
-    background: linear-gradient(30deg, grey, lightYellow, lightBlue);
-    background-repeat: no-repeat;
-    margin-left: 40px;
-    margin-right: 50px;
-    margin-bottom: 20px;
+main.container {
+    margin-top: 10%; /* Adjust this value based on your header's height */
+    margin-left: 250px;
+    margin-right: 250px;
+    margin-bottom: 100px;
 }
 
-#introduction{
-    margin-top: 40px;
-    margin-left: 30px;
+.tabs {
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0;
+    display: flex;
+    list-style-type: none;
+    justify-content:left;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 150px;
+    margin-bottom: 15%;
 }
 
-li{
-    margin-left: 30px;
-    line-height: 2em;
+.tab {
+    padding-top: 5px;
+    padding-bottom: 2px;
+    padding-left: 13px;
+    padding-right: 13px;
+    margin-left: 0;
+    margin-right: 15px;
+    border: thin solid lightGrey;
+    box-shadow: 2px 2px 3px;
+    text-decoration: none;
 }
 
-.indent1{
-    margin-left: 30px;
+h1, h2 {
+    color: darkslategrey;
+}
+
+p {
+    font-family:  comic sans ms;
+    font-style: italic;
+    font-weight: lighter;
+    font-size: 0.9em;
 }
