--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(cv2/cool-pics/_7e56b63b-155f-4be7-af30-4c1ac7b9f159.jpg?v=1.001);
+  background-image: url(bg-hp.jpg?v=1.001);
   background-position: center;
 }
 
