Updated index.html file

--- a/links4sale/styles.css
+++ b/links4sale/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(cool-pics/dices.jpg) !important;
+  background-image: url(../cool-pics/dices.jpg) !important;
   background-position: center;
 }
 
